# plwn-graph-builder

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
PLWNGraphBuilder/: __init__.py  database.py  main.py  plwn_gloss_extractor.ini  plwn_gloss_extractor.py  plwn_graph.py
PLWNGraphBuilder.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
PLWNGraphBuilder/vertices/: __init__.py  lexical_unit.py  synset.py
cfg/: connection.txt
docker/: Dockerfile
plwn_graph_builder/: database.py  graph.py  io.py  main.py  plwn.py  utils.py  vertices.py
